<resources>
    <string name="app_name">Lib_Commons</string>
    <string name="personnel_entrance2">人员入场</string>
    <string name="personnel_appearance">人员出场</string>
    <string name="equipment_admission2">设备入场</string>
    <string name="equipment_appearance">设备出场</string>
    <string name="all">全部</string>
    <string name="load">正在加载...</string>
    <string name="app_name_lite">BES-SHELL(Lite)</string>
    <string name="setting">我的</string>
    <string name="check_net">无法连接网络，请检查网络是否连接.</string>
    <string name="change_password">修改密码</string>
    <string name="swith_language">切换语言</string>
    <string name="my_update_google">从谷歌市场更新</string>
    <string name="my_update_service">从服务器更新</string>
    <string name="my_update_title">更新</string>
    <string name="soft_updating">正在更新...</string>
    <string name="soft_update_cancel">取消</string>
    <string name="main_menu_home">主页</string>
    <string name="main_menu_contacts">通讯录</string>
    <string name="main_menu_contacts2">通讯录</string>
    <string name="home_ptw_submit">许可证申请</string>
    <string name="new_ptw">许可证申请</string>
    <string name="home_ptw_approval">许可证审批</string>
    <string name="ptw_safety_conditions">安全条件</string>
    <string name="ptw_device_list">设备</string>
    <string name="safecheck_details_equipment">设备</string>
    <string name="ptw_device_list2">设备</string>
    <string name="home_tbm">工具箱会议</string>
    <string name="home_tbm2">工具箱会议</string>
    <string name="setting_security_management">安全管理</string>
    <string name="setting_check_for_update">检查更新</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_version_introduced">版本说明</string>
    <string name="setting_permissions">权限设置</string>
    <string name="setting_privacy_policy">隐私政策</string>
    <string name="permissions_unknown_source_installation">允许未知来源CMS-SHELL安装</string>
    <string name="project">项目</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="ptw_type">许可证类型</string>
    <string name="ptw_hint_enter_title">请输入PTW标题</string>
    <string name="ptw_hint_enter_content">请输入</string>
    <string name="hint_enter_title">请输入标题...</string>
    <string name="ptw_content_cant_empty">PTW内容不能为空</string>
    <string name="hint_tbm_title">请输入TBM标题</string>
    <string name="hint_tbm_content">请输入TBM内容</string>
    <string name="set_start_date">设置</string>
    <string name="set_end_date">设置</string>
    <string name="add_pics">添加图片</string>
    <string name="submit">提  交</string>
    <string name="submit_done">提  交</string>
    <string name="btn_submit">提交</string>
    <string name="btn_next">下一步</string>
    <string name="btn_reject">拒绝</string>
    <string name="btn_approve">已验证</string>
    <string name="rejected">未通过</string>
    <string name="approved">审批通过</string>
    <string name="pending">待审批</string>
    <string name="summary">简介</string>
    <string name="members">  成  员  </string>
    <string name="tbm_members">  成  员  </string>
    <string name="members2">  成  员  </string>
    <string name="tbm_members_title">  成  员  </string>
    <string name="name">姓  名</string>
    <string name="title_cant_empty">标题不能为空</string>
    <string name="processing">处理中,请稍后...</string>
    <string name="press_exit_program">再按一次退出程序</string>
    <string name="hint_enter_name">请输入用户名</string>
    <string name="hint_enter_pswd">请输入密码</string>
    <string name="btn_sign_in">登录</string>
    <string name="btn_sign_out">退出登录</string>
    <string name="location">地点</string>
    <string name="location1">地点</string>
    <string name="location2">地点</string>
    <string name="meeting_date">开会日期</string>
    <string name="tbm_details_time">时间</string>
    <string name="home_tbm_submit">工具箱会议</string>
    <string name="home_tbm_list">工具箱会议列表</string>
    <string name="home_project_list">项目列表</string>
    <string name="projects">项目列表</string>
    <string name="proj_name">项目名称</string>
    <string name="pro_member">成员</string>
    <string name="project_detail">项目信息</string>
    <string name="project_detail2">项目信息</string>
    <string name="this_user_does_not_belong_to_any_project">该用户不属于任何项目</string>
    <string name="home_exit">退出</string>
    <string name="register_user">注 册?</string>
    <string name="find_password">忘记密码?</string>
    <string name="start_datetime">开始时间</string>
    <string name="end_datetime">结束时间</string>
    <string name="start_time">开始时间</string>
    <string name="e_deploy_date">入场日期</string>
    <string name="end_time">结束时间</string>
    <string name="home_pro_staff_list">项目通讯录</string>
    <string name="seq">S/N</string>
    <string name="member_wp_no">WP NO.</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="na">空</string>
    <string name="sign_thickness">笔尖大小</string>
    <string name="sign_colors">颜色</string>
    <string name="dialog_i_know">我同意</string>
    <string name="dialog_i_dont_know">我不同意</string>
    <string name="sgin_hint">Note: Electronic signature is compulsory before you can proceed to use this application.</string>
    <string name="electronic_signature_input">Input</string>
    <string name="electronic_signature_saved">Saved</string>
    <string name="electronic_signature_save_hint">请完成签名后再保存</string>
    <string name="members_total">合计:</string>
    <string name="ptw_start_date">开始日期</string>
    <string name="ptw_end_date">结束日期</string>
    <string name="ptw_date">日期</string>
    <string name="ptw_from_time">开始时间</string>
    <string name="ptw_to_time">结束时间</string>
    <string name="ptw_opt_approve_apply">批准申请</string>
    <string name="ptw_opt_approve_close">拒绝</string>
    <string name="ptw_btntxt_close_approve">同意关闭</string>
    <string name="ptw_askdlg_addclose_btnok">确定</string>
    <string name="ptw_alert">Alert</string>
    <string name="ptw_alert_note">Note: The following PTWs were submitted for the same working location or may have overlapping work duration at the same location. Please assess or approve this PTW only when the PTWs are not deemed as incompatible.</string>
    <string name="ptw_add_form">表单</string>
    <string name="ptw_add_form_title">事项</string>
    <string name="ptw_add_form_input_hint">请输入</string>
    <string name="ptw_checklist_details_submitted_by">申请人</string>
    <string name="ptw_start_time_not_empty">开始时间不能为空</string>
    <string name="ptw_end_time_not_empty">结束时间不能为空</string>
    <string name="ptw_type_isempty">类型不能为空</string>
    <string name="ptw_type_hint">请选择类型</string>
    <string name="ptw_select_approve">请选择审批或者批准人</string>
    <string name="ptw_approves_title">审批者/批准者</string>
    <string name="ptw_assessor">审批者</string>
    <string name="ptw_approver">批准者</string>
    <string name="ptw_checker">确认者</string>
    <string name="ptw_hdkh_hse">HDKH安全部门</string>
    <string name="ptw_hdkh_engineer">HDKH工程师</string>
    <string name="ptw_acknowledge">确认</string>
    <string name="ptw_list_acknowledge">确认</string>
    <string name="attendance_re_locate">重新获取</string>
    <string name="leave_current_location">当前位置</string>
    <string name="ptw_checklist_daily_checklist">Daily checklist</string>
    <string name="ptw_checklist_all_checklist">All checklist</string>
    <string name="btn_reject_text">驳回</string>
    <string name="btn_reject_text1">驳回</string>
    <string name="datepicker_donetbn_text">完成</string>
    <string name="commit_askdlg_OK">确定</string>
    <string name="commit_askdlg_Cancel">取消</string>
    <string name="register_msg">没有账户 </string>
    <string name="data_parse_exception">数据解析异常</string>
    <string name="login_exception">登录异常，参数不足</string>
    <string name="personnel_audit">人员审核</string>
    <string name="select_all">全选</string>
    <string name="details">详情</string>
    <string name="basic_fact">基本信息</string>
    <string name="qualification_information">证书信息</string>
    <string name="violation_record">项目</string>
    <string name="equipment_audit">设备审核</string>
    <string name="pendingNum">待审核人数:</string>
    <string name="pendingequipments">待审核数量：</string>
    <string name="exit_query">是否取消选中并关闭当前页</string>
    <string name="admission_audit">入场待审核</string>
    <string name="apperace_audit">出场待审核</string>
    <string name="agree">审核通过</string>
    <string name="refuse">审核不通过</string>
    <string name="shop">商城</string>
    <string name="audit_success">审核成功</string>
    <string name="picture_fail">图片上传失败，请重新上传</string>
    <string name="user_basic_name">姓名</string>
    <string name="gender">性别</string>
    <string name="user_phone">电话</string>
    <string name="country">国籍</string>
    <string name="post">岗位</string>
    <string name="team">团队</string>
    <string name="contractor_name">公司</string>
    <string name="old_psw">原密码</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw2">确认密码</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="input_new_psw2">请输入确认密码</string>
    <string name="psw_verification">新密码不能与原密码相同</string>
    <string name="new_verfication">新密码与确认密码不一致</string>
    <string name="change_success">密码修改成功，请重新登录</string>
    <string name="add_photo">添加照片</string>
    <string name="basic_msg">基本信息</string>
    <string name="act_msg">项目角色</string>
    <string name="hold_meeting">举行会议人</string>
    <string name="team_act">团队角色</string>
    <string name="risk_assessment">风险评估角色</string>
    <string name="license_role">许可证角色</string>
    <string name="security_council">安全委员会角色</string>
    <string name="hold_training_person">举行培训人</string>
    <string name="reviewer">评审者/审批者</string>
    <string name="sumit_suc">成功</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_fail">复制失败</string>
    <string name="work_permit">工作准证</string>
    <string name="certificate_number">准证号码</string>
    <string name="certificate_type">准证类型</string>
    <string name="date_of_issue">签发日期</string>
    <string name="closing_date">截止日期</string>
    <string name="safe_conduct">安全证</string>
    <string name="safe_num">安全证号码</string>
    <string name="insurance_information">保险</string>
    <string name="entry_insurance">入境保险号</string>
    <string name="medical_insurance">医疗保险号码</string>
    <string name="accident_insurance">意外险号码</string>
    <string name="pending_in">Pending (In)</string>
    <string name="pending_out">Pending (Out)</string>
    <string name="examination_and_approval">审批中</string>
    <string name="approval_completed">审批完成</string>
    <string name="approval_rejected">审批驳回</string>
    <string name="step">审批流程</string>
    <string name="application_site">申请地点</string>
    <string name="next_user_name">下一个执行人</string>
    <string name="add_area">添加区域</string>
    <string name="ptw_safelist_check_all_hint">安全条件未完成</string>
    <string name="version_update">版本更新</string>
    <string name="found_update">发现新版本是否更新?,如不更新可能会影响使用.</string>
    <string name="leatest_version">当前为最新版本</string>
    <string name="main_contractor">总包信息</string>
    <string name="sub_contractor">分包信息</string>
    <string name="term">有效期</string>
    <string name="build">开发中...</string>
    <string name="device_name">设备名称</string>
    <string name="e_eqpt_type">设备类型</string>
    <string name="e_eqpt_details">设备描述</string>
    <string name="device_ltd">所属公司</string>
    <string name="safe_content">安全内容</string>
    <string name="safe_status">状态</string>
    <string name="insufficient_authority">权限不足</string>
    <string name="tbm_title">会议名称不能为空</string>
    <string name="tbm_content">会议内容不能为空</string>
    <string name="abnormal_parameter">参数保存异常</string>
    <string name="tbm_declaration_content">本人在此声明所提供的所有信息都是真实且准确的。</string>
    <string name="tbm_temperature_start">Start</string>
    <string name="tbm_temperature_end">End</string>
    <string name="temperature_symbol">℃</string>
    <string name="body_temperature_range">Body temperature range 33 &#8211; 45</string>
    <string name="ptw_dialog_cancle">取消</string>
</resources>